<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchAppointment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/searchHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_appointments"
            android:textSize="23sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/searchDescription"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/searchDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutSearch" />

    <EditText
        android:id="@+id/startDateSearch"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/start_time"
        app:layout_constraintStart_toStartOf="@+id/searchDescription"
        app:layout_constraintTop_toBottomOf="@+id/ownerSearch" />

    <EditText
        android:id="@+id/endDateSearch"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/end_time"
        app:layout_constraintStart_toStartOf="@+id/searchDescription"
        app:layout_constraintTop_toBottomOf="@+id/startDateSearch" />

    <Button
        android:id="@+id/submitSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/endDateSearch"
        app:layout_constraintTop_toBottomOf="@+id/endDateSearch" />

    <TextView
        android:id="@+id/searchPrintArea"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitSearch" />

    <EditText
        android:id="@+id/ownerSearch"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/owner"
        app:layout_constraintStart_toStartOf="@+id/searchDescription"
        app:layout_constraintTop_toBottomOf="@+id/searchDescription" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        android:onClick="backToMain"
        app:layout_constraintStart_toStartOf="@+id/endDateSearch"
        app:layout_constraintTop_toBottomOf="@+id/endDateSearch" />


</androidx.constraintlayout.widget.ConstraintLayout>