<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appointmentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/make_appointment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/make_appointment"
            android:textSize="23sp" />


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/owner"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/ownerInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/owner_of_book"
        app:layout_constraintStart_toEndOf="@+id/owner"
        app:layout_constraintTop_toTopOf="@+id/owner" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/owner"
        app:layout_constraintTop_toBottomOf="@+id/owner" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description"
        app:layout_constraintStart_toEndOf="@+id/owner"
        app:layout_constraintTop_toTopOf="@+id/description" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_time"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/owner"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/startTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/start_time"
        app:layout_constraintStart_toEndOf="@+id/owner"
        app:layout_constraintTop_toTopOf="@+id/startTime" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/end_time"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/owner"
        app:layout_constraintTop_toBottomOf="@+id/startTime" />

    <EditText
        android:id="@+id/endTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/end_time"
        app:layout_constraintStart_toEndOf="@+id/owner"
        app:layout_constraintTop_toTopOf="@+id/endTime" />

    <Button
        android:id="@+id/submitAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeInput" />

    <TextView
        android:id="@+id/printAppointment"
        android:layout_width="370dp"
        android:layout_height="98dp"
        android:layout_marginTop="80dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/submitAppointment"
        app:layout_constraintStart_toStartOf="@+id/endTime"
        app:layout_constraintTop_toBottomOf="@+id/submitAppointment" />

    <TextView
        android:id="@+id/makeAppointmentDescription"
        android:layout_width="384dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/makeAppointmentDescription"
        app:layout_constraintBottom_toTopOf="@+id/owner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/backMake"
        android:layout_width="74dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/back"
        android:onClick="backToMain"
        app:layout_constraintEnd_toStartOf="@+id/submitAppointment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/endTimeInput"
        app:layout_constraintTop_toBottomOf="@+id/endTimeInput" />


</androidx.constraintlayout.widget.ConstraintLayout>